<resources>
    <string name="app_name">Story App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_question">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="logo_desc">Logo</string>
    <string name="register_question">Already have an account?</string>
    <string name="name">Name</string>
    <string name="welcome_register">Welcome!</string>
    <string name="login_title">Login to your account</string>
    <string name="register_title">Create your new account</string>
    <string name="welcome_login">Welcome Back!</string>
    <string name="fab_add_story">Fab Add Story</string>
    <string name="text_username">username</string>
    <string name="text_description">description</string>
    <string name="image_desc">image desc</string>
    <string name="logout_title">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirmed_logout">Logout</string>
    <string name="not_logout">No</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="upload_text">Upload Story</string>
    <string name="description_hint">Description</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="map_title">Map</string>
    <string name="title_activity_maps">Discover Stories</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="posted_by">Posted by %s</string>
    <string name="retry">Retry</string>
    <string name="checkbox_location_text">Use current location</string>
</resources>