<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:src="@drawable/sulthan_story"
            android:contentDescription="@string/logo_desc"
            android:alpha="0"/>

        <TextView
            android:id="@+id/welcome_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_register"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <TextView
            android:id="@+id/register_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_title"
            android:textSize="14sp"
            android:textAlignment="center"
            android:textColor="#595959"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <com.dicoding.storyapp.ui.customview.NameField
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <com.dicoding.storyapp.ui.customview.EmailField
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <com.dicoding.storyapp.ui.customview.PasswordField
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/register"
            android:layout_marginBottom="16dp"
            android:alpha="0"/>

        <LinearLayout
            android:id="@+id/login_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:alpha="0">

            <TextView
                android:id="@+id/register_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#595959"
                android:text="@string/register_question" />

            <TextView
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:textColor="#595959"
                android:text="@string/login" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center" />

</FrameLayout>
